--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,65 @@
-fastapi
-uvicorn
-pydantic
-PyPDF2
-faiss-cpu
-numpy
-sentence-transformers
-langchain
-huggingface-hub
-python-multipart
+annotated-types==0.7.0
+anyio==4.7.0
+blinker==1.9.0
+certifi==2024.12.14      
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+filelock==3.16.1
+Flask==3.1.0
+Flask-Cors==5.0.0        
+fsspec==2024.12.0        
+future==1.0.0
+gevent==24.11.1
+greenlet==3.1.1
+grpcio==1.68.1
+grpcio-tools==1.68.1
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.27.0
+hyperframe==6.0.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+joblib==1.4.2
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+numpy==2.2.1
+packaging==24.2
+pillow==11.1.0
+portalocker==2.10.1
+protobuf==5.29.2
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+pypdf==5.1.0
+PyPDF2==3.0.1
+PySocks==1.7.1
+pywin32==308
+PyYAML==6.0.2
+qdrant-client==1.12.2
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+safetensors==0.5.0
+scikit-learn==1.6.0
+scipy==1.15.0
+sentence-transformers==3.3.1
+sniffio==1.3.1
+sympy==1.13.1
+threadpoolctl==3.5.0
+tldextract==5.1.3
+tokenizers==0.21.0
+torch==2.5.1
+tqdm==4.67.1
+transformers==4.47.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+zope.event==5.0
+zope.interface==7.2
