shehzadas final checkin with the working bot

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,7 @@
-fastapi
-uvicorn
-pydantic
-PyPDF2
-faiss-cpu
-numpy
-sentence-transformers
-langchain
-huggingface-hub
-python-multipart
-asyncpg
-flask
-flask-cors
-qdrant_client
-gunicorn
+Flask==3.1.0
+flask_cors==5.0.0
+pydantic==2.10.4
+PyPDF2==3.0.1
+qdrant_client==1.12.2
+Requests==2.32.3
+sentence_transformers==3.3.1
