--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 Flask==3.1.0
 flask_cors==5.0.0
-pydantic==2.10.4
+pydantic==2.10.5
 PyPDF2==3.0.1
+python-dotenv==1.0.1
 qdrant_client==1.12.2
 Requests==2.32.3
 sentence_transformers==3.3.1
+supabase==2.11.0
