--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip==25.0
+pip==25.1.1
 Flask==3.1.0
 flask_cors==5.0.0
 openai==1.60.0
@@ -9,3 +9,4 @@ qdrant_client==1.13.2
 sentence_transformers==3.3.1
 supabase==2.11.0
 pytest-mock==3.14.0
+gunicorn==23.0.0
